az-templates/guacamole-rdp-vnc-gateway-existing-vnet/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "existingVNETLocation": {
      "type": "string",
      "allowedValues": [
        "East Asia",
        "Southeast Asia",
        "Central US",
        "East US",
        "East US 2",
        "West US",
        "North Central US",
        "South Central US",
        "North Europe",
        "West Europe",
        "Japan West",
        "Japan East",
        "Brazil South",
        "Australia East",
        "Australia Southeast",
        "South India",
        "Central India",
        "West India"
      ],
      "metadata": {
        "description": "Location of the existing VNet (in which to deploy this VM)"
      }
    },
    "vmName": {
      "type": "string",
      "defaultValue": "GuacamoleVM",
      "metadata": {
        "description": "Name for the Guacamole VM"
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_A1",
      "metadata": {
        "description": "Instance size for the Guacamole VM"
      }
    },
    "adminUserName": {
      "type": "string",
      "metadata": {
        "description": "Username to login to the VMs"
      }
    },
    "sshKeyData": {
      "type": "string",
      "metadata": {
        "description": "Public key for SSH authentication"
      }
    },
    "existingVirtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "Name of the existing VNet"
      }
    },
    "existingVirtualNetworkResourceGroup": {
      "type": "string",
      "metadata": {
        "description": "Name of the Resource Group containing the existing VNet"
      }
    },
    "existingSubnetName": {
      "type": "string",
      "metadata": {
        "description": "Name of the subnet in the VNet you want to use"
      }
    }
  },
  "variables": {
    "vnetID": "[resourceId(parameters('existingVirtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks', parameters('existingVirtualNetworkName'))]",
    "subnetRef": "[concat(variables('vnetID'),'/subnets/', parameters('existingSubnetName'))]",
    "osImageSku": "Stable",
    "securityGroupName": "[concat( parameters('vmName'), '-NSG' )]",
    "nicName": "[concat( parameters('vmName'), '-NIC' )]",
    "publicIpAddressName": "[concat( parameters('vmName'), '-IP' )]",
    "vhdStorageAccountName": "[concat(uniqueString(resourceGroup().id), 'guacvhd')]",
    "vhdStorageAccountType": "Standard_LRS",
    "sshKeyPath": "[concat('/home/', parameters('adminUsername'),'/.ssh/authorized_keys')]",
    "cloudConfig": "I2Nsb3VkLWNvbmZpZw0KY29yZW9zOg0KICB1cGRhdGU6DQogICAgcmVib290LXN0cmF0ZWd5OiBiZXN0LWVmZm9ydA0KICB1bml0czoNCiAgICAtIG5hbWU6IGRvY2tlci5zZXJ2aWNlDQogICAgICBjb21tYW5kOiBzdGFydA0KICAgIC0gbmFtZTogZG9ja2VyLWd1YWNhbW9sZS5zZXJ2aWNlDQogICAgICBjb21tYW5kOiBzdGFydA0KICAgICAgY29udGVudDogfA0KICAgICAgICBbVW5pdF0NCiAgICAgICAgRGVzY3JpcHRpb249R3VhY2Ftb2xlIHJ1bm5pbmcgb24gRG9ja2VyDQogICAgICAgIA0KICAgICAgICBSZXF1aXJlcz1kb2NrZXIuc2VydmljZSBkb2NrZXItZ3VhY2Quc2VydmljZSBkb2NrZXItbWFyaWFkYi5zZXJ2aWNlIGRv [...]
  },
  "resources": [
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIpAddressName')]",
      "location": "[parameters('existingVNETLocation')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('vhdStorageAccountName')]",
      "location": "[parameters('existingVNETLocation')]",
      "properties": {
        "accountType": "[variables('vhdStorageAccountType')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('securityGroupName')]",
      "location": "[parameters('existingVNETLocation')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationPortRange": "22",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "HTTP",
            "properties": {
              "description": "Allows HTTP traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationPortRange": "80",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[parameters('existingVNETLocation')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('securityGroupName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnetRef')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('securityGroupName'))]"
        }
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('vmName')]",
      "location": "[parameters('existingVNETLocation')]",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('vhdStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('vmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "customData": "[variables('cloudConfig')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": "true",
            "ssh": {
              "publicKeys": [
                {
                  "path": "[variables('sshKeyPath')]",
                  "keyData": "[parameters('sshKeyData')]"
                }
              ]
            }
          }
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "CoreOS",
            "offer": "CoreOS",
            "sku": "[variables('osImageSku')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "[parameters('vmName')]",
            "vhd": {
              "uri": "[concat('http://',variables('vhdStorageAccountName'),'.blob.core.windows.net/vhds/',parameters('vmName'),'-OS', '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
            }
          ]
        }
      }
    }
  ]
}
